azureps-cmdlets-docs/ResourceManager/AzureRM.Insights/v1.0.12/AzureRM.Insights.md
---
Module Name: AzureRM.Insights
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link: {{Please enter FwLink manually}}
Help Version: {{Please enter version of help manually (X.X.X.X) format}}
Locale: en-US
ms.assetid: C91BA8AA-3ECF-40F9-95F7-2333A3600D42
---

# AzureRM.Insights Module
## Description
This topic displays help topics for the Azure Insights Cmdlets. 

## AzureRM.Insights Cmdlets
### [Add-AzureRmAutoscaleSetting](./Add-AzureRmAutoscaleSetting.md)
Creates an Autoscale setting.


### [Add-AzureRmLogAlertRule](./Add-AzureRmLogAlertRule.md)
Adds or replaces a log alert rule.


### [Add-AzureRmLogProfile](./Add-AzureRmLogProfile.md)
Creates a log profile.


### [Add-AzureRmMetricAlertRule](./Add-AzureRmMetricAlertRule.md)
Adds or updates a metric-based alert rule.


### [Add-AzureRmWebtestAlertRule](./Add-AzureRmWebtestAlertRule.md)
Adds or updates a webtest alert rule.


### [Get-AzureRmAlertHistory](./Get-AzureRmAlertHistory.md)
Gets the history of alerts.


### [Get-AzureRmAlertRule](./Get-AzureRmAlertRule.md)
Gets alert rules.


### [Get-AzureRmAutoscaleHistory](./Get-AzureRmAutoscaleHistory.md)
Gets the Autoscale history.


### [Get-AzureRmAutoscaleSetting](./Get-AzureRmAutoscaleSetting.md)
Gets Autoscale settings.


### [Get-AzureRmDiagnosticSetting](./Get-AzureRmDiagnosticSetting.md)
Gets the logged categories and time grains.


### [Get-AzureRmLogProfile](./Get-AzureRmLogProfile.md)
Gets a log profile.


### [Get-AzureRmLog](./Get-AzureRmLog.md)
Gets a log of events.


### [Get-AzureRmMetricDefinition](./Get-AzureRmMetricDefinition.md)
Gets metric definitions.


### [Get-AzureRmMetric](./Get-AzureRmMetric.md)
Gets the metric values of a resource.


### [Get-AzureRmUsage](./Get-AzureRmUsage.md)
Gets the usage metrics for a resource.


### [New-AzureRmAlertRuleEmail](./New-AzureRmAlertRuleEmail.md)
Creates an email action for an alert rule.


### [New-AzureRmAlertRuleWebhook](./New-AzureRmAlertRuleWebhook.md)
Creates an alert rule webhook.


### [New-AzureRmAutoscaleNotification](./New-AzureRmAutoscaleNotification.md)
Creates an Autoscale email notification.


### [New-AzureRmAutoscaleProfile](./New-AzureRmAutoscaleProfile.md)
Creates an Autoscale profile.


### [New-AzureRmAutoscaleRule](./New-AzureRmAutoscaleRule.md)
Creates an Autoscale rule.


### [New-AzureRmAutoscaleWebhook](./New-AzureRmAutoscaleWebhook.md)
Creates an Autoscale webhook.


### [Remove-AzureRmAlertRule](./Remove-AzureRmAlertRule.md)
Removes an alert rule.


### [Remove-AzureRmAutoscaleSetting](./Remove-AzureRmAutoscaleSetting.md)
Removes an Autoscale setting.


### [Remove-AzureRmLogProfile](./Remove-AzureRmLogProfile.md)
Removes a log profile.


### [Set-AzureRmDiagnosticSetting](./Set-AzureRmDiagnosticSetting.md)
Sets the logs and metrics settings for the resource.



