azureps-cmdlets-docs/ResourceManager/AzureRM.Insights/v3.4.0/AzureRM.Insights.md
---
Module Name: AzureRM.Insights
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link:
  [object Object]:
Help Version:
  [object Object]: null
Locale: en-US
content_git_url: https://github.com/Azure/azure-powershell/blob/preview/src/ResourceManager/Insights/Commands.Insights/help/AzureRM.Insights.md
original_content_git_url: https://github.com/Azure/azure-powershell/blob/preview/src/ResourceManager/Insights/Commands.Insights/help/AzureRM.Insights.md
gitcommit: https://github.com/Azure/azure-powershell/blob/bc68f11db3b16b8ed21d578a6edeb50312deedb0
---

# AzureRM.Insights Module
## Description
This topic displays help topics for the Azure Insights Cmdlets.

## AzureRM.Insights Cmdlets
### [Add-AzureRmAutoscaleSetting](Add-AzureRmAutoscaleSetting.md)
Creates an Autoscale setting.

### [Add-AzureRmLogAlertRule](Add-AzureRmLogAlertRule.md)
Adds or replaces a log alert rule.

### [Add-AzureRmLogProfile](Add-AzureRmLogProfile.md)
Creates a log profile.

### [Add-AzureRmMetricAlertRule](Add-AzureRmMetricAlertRule.md)
Adds or updates a metric-based alert rule.

### [Add-AzureRmWebtestAlertRule](Add-AzureRmWebtestAlertRule.md)
Adds or updates a webtest alert rule.

### [Disable-AzureRmActivityLogAlert](Disable-AzureRmActivityLogAlert.md)
Disables an activity log alert resource and optionally sets its tags.

### [Enable-AzureRmActivityLogAlert](Enable-AzureRmActivityLogAlert.md)
Enables an activity log alert resource and optionally sets its tags.

### [Get-AzureRmActivityLogAlert](Get-AzureRmActivityLogAlert.md)
Gets an activity log alert resource.

### [Get-AzureRmAlertHistory](Get-AzureRmAlertHistory.md)
Gets the history of alerts.

### [Get-AzureRmAlertRule](Get-AzureRmAlertRule.md)
Gets alert rules.

### [Get-AzureRmAutoscaleHistory](Get-AzureRmAutoscaleHistory.md)
Gets the Autoscale history.

### [Get-AzureRmAutoscaleSetting](Get-AzureRmAutoscaleSetting.md)
Gets Autoscale settings.

### [Get-AzureRmDiagnosticSetting](Get-AzureRmDiagnosticSetting.md)
Gets the logged categories and time grains.

### [Get-AzureRmLog](Get-AzureRmLog.md)
Gets a log of events.

### [Get-AzureRmLogProfile](Get-AzureRmLogProfile.md)
Gets a log profile.

### [Get-AzureRmMetric](Get-AzureRmMetric.md)
Gets the metric values of a resource.

### [Get-AzureRmMetricDefinition](Get-AzureRmMetricDefinition.md)
Gets metric definitions.

### [Get-AzureRmUsage](Get-AzureRmUsage.md)
Gets the usage metrics for a resource.

### [New-AzureRmActionGroup](New-AzureRmActionGroup.md)
Creates a new action group reference in memory.

### [New-AzureRmActivityLogAlertCondition](New-AzureRmActivityLogAlertCondition.md)
Creates a new activity log alert condition in memory.

### [New-AzureRmAlertRuleEmail](New-AzureRmAlertRuleEmail.md)
Creates an email action for an alert rule.

### [New-AzureRmAlertRuleWebhook](New-AzureRmAlertRuleWebhook.md)
Creates an alert rule webhook.

### [New-AzureRmAutoscaleNotification](New-AzureRmAutoscaleNotification.md)
Creates an Autoscale email notification.

### [New-AzureRmAutoscaleProfile](New-AzureRmAutoscaleProfile.md)
Creates an Autoscale profile.

### [New-AzureRmAutoscaleRule](New-AzureRmAutoscaleRule.md)
Creates an Autoscale rule.

### [New-AzureRmAutoscaleWebhook](New-AzureRmAutoscaleWebhook.md)
Creates an Autoscale webhook.

### [Remove-AzureRmActivityLogAlert](Remove-AzureRmActivityLogAlert.md)
Removes an activity log alert.

### [Remove-AzureRmAlertRule](Remove-AzureRmAlertRule.md)
Removes an alert rule.

### [Remove-AzureRmAutoscaleSetting](Remove-AzureRmAutoscaleSetting.md)
Removes an Autoscale setting.

### [Remove-AzureRmLogProfile](Remove-AzureRmLogProfile.md)
Removes a log profile.

### [Set-AzureRmActivityLogAlert](Set-AzureRmActivityLogAlert.md)
Creates or updates an activity log alert.

### [Set-AzureRmDiagnosticSetting](Set-AzureRmDiagnosticSetting.md)
Sets the logs and metrics settings for the resource.
